# saltworks-cli-template

./: cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_slug }}/: .gitignore  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/: __main__.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/console/: main.py
{{ cookiecutter.project_slug }}/tests/unit/: test_cli.py
